test/err.txt
error: Missing escape
at 3: 'abc\'
----------^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised escape
at 3: 'abc\x'
----------^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Status overflow
at 4: 'abc%0'
-----------^
literal: 'a'
literal: 'b'
literal: 'c'
error: Status overflow
at 4: 'abc%000'
-----------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing directive
at 3: 'abc%65529'
----------^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Status overflow
at 4: 'abc%65530'
-----------^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Too many statuses
at 261: 'abc%1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,3,3,3,3,3,3,3,3,3,3,4,4,4,4,4,4,4,4,4,4,5,5,5,5,5,5,5,5,5,5,6,6,6,6,6,6,6,6,6,6,7,7,7,7,7,7,7,7,7,7,8,8,8,8,8,8,8,8,8,8,9,9,9,9,9,9,9,9,9,9,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,3,3,3,3,3,3,3,3,3,3,4,4,4,4,4,4,4,4,9'
------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing closing brace
at 4: 'abc%{xyz'
-----------^
literal: 'a'
literal: 'b'
literal: 'c'
error: Empty name
at 4: 'abc%{}xyz'
-----------^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%{xyz}-x'
----------^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
literal: 'a'
literal: 'b'
literal: 'c'
>strftime: (when=0, fmt=xyz)
error: Unrecognised directive
at 3: 'abc%>{xyz}-t'
----------^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Too many redirect flags
at 4: 'abc%<>>>---'
-----------^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Too many redirect flags
at 4: 'abc%<>>>{xyz}t'
-----------^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing directive
at 3: 'abc%<'
----------^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%<_xyz'
----------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%<{xyz}-xyz'
----------^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%<{xyz}^xyz'
----------^^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing name
at 3: 'abc%C'
----------^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing name
at 3: 'abc%<C'
----------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Name overflow
at 6: 'abc%<{0000000000111111111122222222223333333333444444444455555555556666666666777777777788888888889999999999000000000011111111112222222x}C'
-------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unwanted name
at 4: 'abc%{xyz}z'
-----------^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised ip type
at 5: 'abc%{xyz}a'
------------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised port type
at 5: 'abc%{xyz}p'
------------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised id type
at 5: 'abc%{xyz}P'
------------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised rtime unit
at 5: 'abc%{xyz}T'
------------^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%{xyz}^x'
----------^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%{xyz}^tx'
----------^^^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing directive
at 3: 'abc%'
----------^
literal: 'a'
literal: 'b'
literal: 'c'
error: Missing directive
at 3: 'abc%{xyz}'
----------^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%_'
----------^^
literal: 'a'
literal: 'b'
literal: 'c'
error: Unrecognised directive
at 3: 'abc%{xyz}_'
----------^^^^^^^
literal: 'a'
literal: 'b'
literal: 'c'
